# technologia

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  tech.md
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_init.py
backend/app/: __init__.py  main.py
backend/app/api/v1/: router.py
backend/app/api/v1/routes/: auth.py  health.py  items.py  projects.py  users.py
backend/app/core/: config.py  deps.py  logging.py  security.py
backend/app/db/: base.py  session.py
backend/app/db/models/: __init__.py  item.py  project.py  user.py
backend/app/integrations/: README.md
backend/app/repositories/: base.py  item_repository.py  project_repository.py  user_repository.py
backend/app/schemas/: auth.py  common.py  item.py  project.py  user.py
backend/app/services/: auth_service.py  bootstrap.py  item_service.py  project_service.py
backend/app/tests/: conftest.py  test_auth.py  test_items.py  test_projects.py
docs/: ARCHITECTURE.md
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.app.tsbuildinfo
frontend/src/: main.tsx
frontend/src/app/: providers.tsx  router.tsx
frontend/src/app/layout/: AppShell.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  select.tsx  table.tsx  textarea.tsx
frontend/src/lib/: api.ts  utils.ts
frontend/src/stores/: auth.store.ts  theme.store.ts
frontend/src/styles/: globals.css
(+12 files in other folders)
